--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,3 +1,19 @@
 .center-element {
 	    text-align:center;
 }
+
+.containerbody{
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 40px;
+    color: black !important;
+    margin: 0;
+    padding: 0;
+	width: 100%;
+    height: 100%;
+}
+ 
+
+
+  
+ 
+ 
