Fix minor bugs and add design changes

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -12,8 +12,12 @@
     height: 100%;
 }
  
+.preview-image{
+	width: 260px;
+  	height: 170px;
+}
 
-
-  
- 
- 
+.full-image{
+	width:100%;
+	height:100%
+}
